fix: avoid mobile copy button overlap

--- a/src/client/theme-default/styles/components/vp-doc.css
+++ b/src/client/theme-default/styles/components/vp-doc.css
@@ -306,6 +306,10 @@
   .vp-doc li div[class*='language-'] {
     border-radius: 8px 0 0 8px;
   }
+
+  .vp-doc [class*='language-'] code {
+    padding-right: 64px;
+  }
 }
 
 .vp-doc div[class*='language-'] + div[class*='language-'],
